--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </form>
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="cart.html">Keranjang</a>
+                <a class="nav-link active" aria-current="page" href="/page/cart.html">Keranjang</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Notifikasi</a>
